--- a/css/general.css
+++ b/css/general.css
@@ -7,25 +7,62 @@
   --gray: #3a3533;
   --dark-blue: #000e33;
   --dark-red: #800000;
+  --mid-blue: #5f9fba;
+  --off-white: #dbdbdb;
+}
+body {
+  padding-top: 85px;
+  height: 100%;
+  margin: 0 auto;
+  font-family: 'noto-sans';
+  color: var(--dark-blue);
+  background-color: var(--cop-blue);
+}
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 section.cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: top;
+  justify-content: center;
   gap: 24px;
+  margin-left: 24px;
+  margin-right: 24px;
 }
-
+h2 {
+  color: var(--yellow);
+}
+h3 {
+  color: var(--dark-blue);
+}
+h4 {
+  color: var(--gray);
+}
 .card {
   display: flex;
   flex-direction: column;
-  border: 0px solid gray;
-  box-shadow: 0px 0px 2px 2px gray;
+  border-radius: 8px;
+  box-shadow: 0px 0px 2px 2px var(--dark-blue);
   padding: 8px;
+  background-color: var(--off-white);
+  max-width: 400px;
 }
 .card .card-top {
   display: flex;
   flex-direction: row;
 }
 .card img {
-  max-width: 70px;
-  max-height: 120px;
+  width: 70px;
+  height: 100px;
+  border-radius: 8px;
+}
+.card .card-title {
+  margin-left: 16px;
+}
+.card-title h4,
+.card-title h3 {
+  margin: 4px;
 }
