--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,7 @@
 header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  align-items: center;
   padding-left: 24px;
   padding-right: 24px;
   width: 100%;
@@ -21,4 +22,18 @@ header ul {
   display: flex;
   flex: 1;
   justify-content: space-between;
+  max-width: 45%;
+  margin: 0px 8px 0px 0px;
+}
+header li {
+  width: 100%;
+  height: 100%;
+  transition: 0.2 ease;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+header li:hover {
+  background-color: var(--mid-blue);
+  opacity: 0.9;
+  transform: translateY(-3px);
 }
