--- a/css/footer.css
+++ b/css/footer.css
@@ -6,7 +6,7 @@
   --dark-red: #800000;
 }
 footer {
-  height: 80px;
+  height: 60px;
   width: 100%;
   position: relative;
   margin-top: 24px;
@@ -20,18 +20,20 @@ footer {
 }
 footer div {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: space-between;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   min-width: 250px;
 }
 footer svg {
   max-width: 20px;
   fill: var(--yellow);
+  align-self: center;
+  margin-right: 8px;
 }
-footer p,
-footer a {
-  display: inline;
+footer a,
+footer h5 {
   text-decoration: none;
   color: var(--yellow);
+  text-shadow: 0px 0px 2px var(--dark-blue);
 }
