--- a/css/general.css
+++ b/css/general.css
@@ -8,10 +8,10 @@
   --dark-blue: #000e33;
   --dark-red: #800000;
   --mid-blue: #5998b3;
-  --off-white: #dbdbdb;
+  --off-white: rgb(219, 219, 219, 0.9);
 }
 body {
-  padding-top: 85px;
+  padding-top: 80px;
   margin: 0 auto;
   font-family: 'noto-sans';
   color: var(--dark-blue);
@@ -29,12 +29,20 @@ main {
 /* Landing page styling */
 
 section.landing-page {
-  max-width: 80%;
-  min-height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 10% 10% 10% 10%;
+  padding: 24px;
+  max-width: 60%;
+  background-color: var(--off-white);
+  border-radius: 8px;
+  box-shadow: 0px 0px 2px var(--dark-blue);
+}
+section.landing-page h2 {
+  font-size: 2rem;
+  text-shadow: 0px 0px 2px var(--dark-blue);
 }
 section.landing-page p {
   font-size: 1.25rem;
@@ -51,11 +59,13 @@ section.landing-page a {
   text-decoration: underline;
   list-style: none;
   color: var(--yellow);
+  text-shadow: 0px 0px 2px var(--dark-blue);
 }
 section.landing-page li {
   padding: 24px;
   border: 1px solid var(--dark-blue);
   border-radius: 16px;
+  background-color: var(--cop-blue);
 }
 
 /* characters page-styling */
@@ -70,6 +80,7 @@ section.cards {
 }
 h2 {
   color: var(--yellow);
+  text-shadow: 0px 0px 2px var(--dark-blue);
 }
 h3 {
   color: var(--dark-blue);
@@ -82,7 +93,7 @@ h4 {
   flex-direction: column;
   border-radius: 8px;
   box-shadow: 0px 0px 2px 2px var(--dark-blue);
-  padding: 8px;
+  padding: 16px;
   background-color: var(--off-white);
   max-width: 400px;
 }
@@ -103,7 +114,9 @@ h4 {
   margin: 4px;
 }
 /* Quiz-styling */
-
+main.quiz h2 {
+  text-shadow: 0px 0px 2px var(--dark-blue);
+}
 article.question {
   display: flex;
   flex-direction: column;
@@ -153,10 +166,25 @@ form input.submit {
   align-self: center;
 }
 form input.submit:hover {
-  opacity: 0.8;
+  background-color: rgb(163, 0, 0);
   transform: translateY(-3px);
 }
 label:hover,
 input:hover {
   cursor: pointer;
+}
+
+/* Results page styling */
+section.results-presentation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 15% 10% 15% 10%;
+  padding: 24px;
+  max-width: 40%;
+  background-color: var(--off-white);
+  border-radius: 8px;
+  box-shadow: 0px 0px 2px var(--dark-blue);
+  text-align: center;
 }
