--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@ header {
   padding-left: 24px;
   padding-right: 24px;
   width: 100%;
-  height: 85px;
+  height: 72px;
   background-color: var(--mid-blue);
   position: fixed;
   top: 0;
@@ -18,10 +18,16 @@ header ul a {
   text-decoration: none;
   list-style: none;
 }
+header h1 {
+  font-size: 2.5rem;
+  text-shadow: 0px 0px 2px var(--dark-blue);
+}
 header ul {
   display: flex;
   flex: 1;
   justify-content: space-between;
+  align-items: center;
+  text-align: center;
   max-width: 45%;
   margin: 0px 8px 0px 0px;
 }
@@ -31,6 +37,8 @@ header li {
   transition: 0.2 ease;
   margin-left: 8px;
   margin-right: 8px;
+  font-size: 1.5rem;
+  text-shadow: 0px 0px 2px var(--dark-blue);
 }
 header li:hover {
   background-color: var(--mid-blue);
