--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'noto-sans';
-  src: url('../fonts/Noto_Sans.woff/NotoSans-Regular.woff') format('woff'),
-    url('../fonts/Noto_Sans.woff/NotoSans-Regular.woff2') format('woff2');
+  src: url('../data/NotoSans-Regular.woff') format('woff'),
+    url('../data/NotoSans-Regular.woff2') format('woff2');
 }
 @font-face {
   font-family: 'noto-sans';
